objects/Opportunity.object
<CustomObject>
    <businessProcesses>
        <fullName>Venda Tegra</fullName>
        <isActive>true</isActive>
        <values>
            <fullName>Ganho</fullName>
        </values>
        <values>
            <fullName>Negociação%2FRevisão</fullName>
        </values>
        <values>
            <fullName>Perdido</fullName>
        </values>
    </businessProcesses>
    <fields>
        <fullName>OrderNumber__c</fullName>
        <label>Número do Pedido</label>
        <length>8</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>TW1_Empreendimento__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Empreendimento de Interesse</label>
        <referenceTo>TW1_Empreendimento__c</referenceTo>
        <relationshipLabel>Oportunidades</relationshipLabel>
        <relationshipName>Oportunidades</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>TW1_Numero_da_Oportunidade__c</fullName>
        <displayFormat>{00000}</displayFormat>
        <externalId>true</externalId>
        <label>Número da Oportunidade</label>
        <type>AutoNumber</type>
    </fields>
    <fields>
        <fullName>TW1_Regiao__c</fullName>
        <label>Região</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Zona Norte</fullName>
                </value>
                <value>
                    <fullName>Zona Sul</fullName>
                </value>
                <value>
                    <fullName>Centro</fullName>
                </value>
                <value>
                    <fullName>Zona Oeste</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>TW1_Tipo__c</fullName>
        <label>Tipo</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Comercial</fullName>
                </value>
                <value>
                    <fullName>Residencial</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>TW1_Tipo_de_Contrato__c</fullName>
        <label>Tipo de Contrato</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>11</fullName>
                    <label>PCV Pública com financiamento</label>
                </value>
                <value>
                    <fullName>12</fullName>
                    <label>PCV Particular com financiamento</label>
                </value>
                <value>
                    <fullName>13</fullName>
                    <label>PCV Pública à vista</label>
                </value>
                <value>
                    <fullName>14</fullName>
                    <label>PCV Particular à vista</label>
                </value>
                <value>
                    <fullName>15</fullName>
                    <label>Recibo de sinal com prev. Financiamento</label>
                </value>
                <value>
                    <fullName>16</fullName>
                    <label>Recibo de sinal a vista</label>
                </value>
                <value>
                    <fullName>17</fullName>
                    <label>Recibo de sinal com prev. AF</label>
                </value>
                <value>
                    <fullName>18</fullName>
                    <label>CV com AF Particular</label>
                </value>
                <value>
                    <fullName>19</fullName>
                    <label>CV Pública</label>
                </value>
                <value>
                    <fullName>22</fullName>
                    <label>Rescisão Pública</label>
                </value>
                <value>
                    <fullName>23</fullName>
                    <label>Rescisão Particular</label>
                </value>
                <value>
                    <fullName>24</fullName>
                    <label>Cessão de Direitos Pública</label>
                </value>
                <value>
                    <fullName>25</fullName>
                    <label>Cessão de Direitos Particular</label>
                </value>
                <value>
                    <fullName>26</fullName>
                    <label>PCV Particular com previsão de AF</label>
                </value>
                <value>
                    <fullName>27</fullName>
                    <label>CV com AF Pública</label>
                </value>
                <value>
                    <fullName>28</fullName>
                    <label>PCV Pública com previsão de AF</label>
                </value>
                <value>
                    <fullName>29</fullName>
                    <label>Cessão Pública de AF</label>
                </value>
                <value>
                    <fullName>30</fullName>
                    <label>Cessão Particular de AF</label>
                </value>
                <value>
                    <fullName>31</fullName>
                    <label>Dação em pagamento</label>
                </value>
                <value>
                    <fullName>32</fullName>
                    <label>Aditamento de AF</label>
                </value>
                <value>
                    <fullName>33</fullName>
                    <label>PCV Pública com recursos próprios</label>
                </value>
                <value>
                    <fullName>34</fullName>
                    <label>PCV Particular com recursos próprios</label>
                </value>
                <value>
                    <fullName>PERMUTANTE</fullName>
                </value>
                <value>
                    <fullName>LEGADO</fullName>
                </value>
                <value>
                    <fullName>A atualizar</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>TW1_Unidade_de_Interesse__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Unidade de Interesse</label>
        <lookupFilter>
            <active>true</active>
            <filterItems>
                <field>$Source.TW1_Empreendimento__c</field>
                <operation>equals</operation>
                <valueField>Product2.TW1_Bloco__r.TW1_Empreendimento__c</valueField>
            </filterItems>
            <filterItems>
                <field>Product2.TW1_Disponibilidade__c</field>
                <operation>equals</operation>
                <value>DISPONÍVEL</value>
            </filterItems>
            <isOptional>false</isOptional>
        </lookupFilter>
        <referenceTo>Product2</referenceTo>
        <relationshipLabel>Oportunidades</relationshipLabel>
        <relationshipName>Oportunidades</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>TrackingNumber__c</fullName>
        <label>Código de Rastreio</label>
        <length>12</length>
        <type>Text</type>
    </fields>
    <listViews>
        <fullName>AllOpportunities</fullName>
        <columns>OPPORTUNITY.NAME</columns>
        <columns>TW1_Numero_da_Oportunidade__c</columns>
        <columns>ACCOUNT.NAME</columns>
        <columns>OPPORTUNITY.AMOUNT</columns>
        <columns>OPPORTUNITY.CLOSE_DATE</columns>
        <columns>OPPORTUNITY.STAGE_NAME</columns>
        <columns>CORE.USERS.ALIAS</columns>
        <filterScope>Everything</filterScope>
        <label>Todas Oportunidades</label>
    </listViews>
    <listViews>
        <fullName>ClosingNextMonth</fullName>
        <filterScope>Everything</filterScope>
        <filters>
            <field>OPPORTUNITY.CLOSED</field>
            <operation>equals</operation>
            <value>0</value>
        </filters>
        <filters>
            <field>OPPORTUNITY.CLOSE_DATE</field>
            <operation>equals</operation>
            <value>NEXT_MONTH</value>
        </filters>
        <label>Closing Next Month</label>
    </listViews>
    <listViews>
        <fullName>ClosingThisMonth</fullName>
        <filterScope>Everything</filterScope>
        <filters>
            <field>OPPORTUNITY.CLOSED</field>
            <operation>equals</operation>
            <value>0</value>
        </filters>
        <filters>
            <field>OPPORTUNITY.CLOSE_DATE</field>
            <operation>equals</operation>
            <value>THIS_MONTH</value>
        </filters>
        <label>Closing This Month</label>
    </listViews>
    <listViews>
        <fullName>Default_Opportunity_Pipeline</fullName>
        <filterScope>Mine</filterScope>
        <filters>
            <field>OPPORTUNITY.CLOSE_DATE</field>
            <operation>greaterOrEqual</operation>
            <value>LAST_N_MONTHS:3</value>
        </filters>
        <label>Opportunity Pipeline</label>
    </listViews>
    <listViews>
        <fullName>MyOpportunities</fullName>
        <filterScope>Mine</filterScope>
        <label>My Opportunities</label>
    </listViews>
    <listViews>
        <fullName>NewLastWeek</fullName>
        <filterScope>Everything</filterScope>
        <filters>
            <field>OPPORTUNITY.CREATED_DATE</field>
            <operation>equals</operation>
            <value>LAST_WEEK</value>
        </filters>
        <label>New Last Week</label>
    </listViews>
    <listViews>
        <fullName>NewThisWeek</fullName>
        <filterScope>Everything</filterScope>
        <filters>
            <field>OPPORTUNITY.CREATED_DATE</field>
            <operation>equals</operation>
            <value>THIS_WEEK</value>
        </filters>
        <label>New This Week</label>
    </listViews>
    <listViews>
        <fullName>Private</fullName>
        <filterScope>Everything</filterScope>
        <filters>
            <field>OPPORTUNITY.PRIVATE</field>
            <operation>equals</operation>
            <value>1</value>
        </filters>
        <label>Private</label>
    </listViews>
    <listViews>
        <fullName>Won</fullName>
        <filterScope>Everything</filterScope>
        <filters>
            <field>OPPORTUNITY.CLOSED</field>
            <operation>equals</operation>
            <value>1</value>
        </filters>
        <filters>
            <field>OPPORTUNITY.WON</field>
            <operation>equals</operation>
            <value>1</value>
        </filters>
        <label>Won</label>
    </listViews>
    <recordTypes>
        <fullName>TW1_Venda_Tegra</fullName>
        <active>true</active>
        <businessProcess>Venda Tegra</businessProcess>
        <label>Venda Tegra</label>
    </recordTypes>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>